--- a/static/css/style.css
+++ b/static/css/style.css
@@ -8,3 +8,47 @@ body,
 html {
   height: 100%;
 }
+.legend {
+  padding: 15px;
+  font-family: Sanchez, serif;
+  font-size: 16px;
+  font-weight: bold;
+  line-height: 18px;
+  color: #555;
+  background-color: white;
+  border-radius: 5px;
+  box-shadow: 0 0 15px rgba(0, 0, 0, 0.2);
+}
+.info.legend {
+  line-height: 18px;
+  color: #555;
+}
+
+.info.legend i {
+  width: 18px;
+  height: 18px;
+  float: left;
+  margin-right: 8px;
+  opacity: 0.7;
+}
+
+/* Specify the colors for each depth interval */
+.info.legend i.red {
+  background: red;
+}
+
+.info.legend i.orange {
+  background: orange;
+}
+
+.info.legend i.yellow {
+  background: yellow;
+}
+
+.info.legend i.lime {
+  background: lime;
+}
+
+.info.legend i.green {
+  background: green;
+}
